# ios-toolchain-based-on-clang-for-linux

./: Clang-LLVM-build.md  HowTo_en.md  Howto_debug_en.md  ProjectHome.md  README.md  build_clang_en.md  debug-server.md  debugserver_en.md  iphoneos_sdk_en.md  llvm_gcc.md
cctools-836/: configure  configure.ac
cctools-836-ld64-134.9/: configure  configure.ac
cctools-836-ld64-134.9/ar/: Makefile.in  ar.c  contents.c
cctools-836-ld64-134.9/ld64/: Makefile.in
cctools-836-ld64-134.9/ld64/src/abstraction/: MachOFileAbstraction.hpp
cctools-836-ld64-134.9/ld64/src/ld/: OutputFile.cpp  ld.hpp  strlcat.h
cctools-836-ld64-134.9/ld64/src/ld/parsers/libunwind/: InternalMacros.h
cctools-836-ld64-134.9/libstuff/: Makefile.in  emulated.c
cctools-836-ld64-134.9/man/: Makefile.in
cctools-836-ld64-134.9/otool/: Makefile.in
cctools-836/ar/: archive.c  contents.c
cctools-836/as/: app.c  driver.c  input-scrub.c  messages.c  read.c
cctools-836/include/: Makefile.in  config.h.in
cctools-836/ld64/: Makefile.in
cctools-836/ld64-128.2/: Makefile
cctools-836/libstuff/: Makefile.in  execute.c  llvm.c
cctools-836/man/: libtool.1
cctools-836/misc/: lipo.c
cctools-836/otool/: Makefile.in
cctools-porting/: cctools-ld64.sh
cctools-porting/patches/: cctools-836-ported.patch  ld64-134.9-ported.patch  ld64-236.3-ported.patch  ld64-backward-support-for-llvm-gcc.patch  libobjc-remove-dispatch.patch
cctools-porting/projectfiles/: autogen.sh  configure.ac
cctools-porting/workspace/: configure.ac
corefoundation/: README
editor/: editor.pro  textedit.cpp  textedit.h
iPhoneSDK-utils/: ChangeLog  Makefile.am  Makefile.in  configure  configure.ac
iPhoneSDK-utils-1.0/: Makefile.am  autogen.sh  configure.ac
iPhoneSDK-utils-1.0/createProject/: Makefile.am
iPhoneSDK-utils-1.0/createProject/iPhoneTemplates/: Example_UICatalog.template
iPhoneSDK-utils-1.0/createProject/templates/: Command_line_utility.template  Example_UICatalog.template
iPhoneSDK-utils-1.0/createProject/templates/Application/: Makefile
iPhoneSDK-utils-1.0/createProject/templates/Notification_Center_widget/: Makefile
iPhoneSDK-utils-1.0/genLocalization2/: getLocalizedStringFromFile.cpp  main.cpp
iPhoneSDK-utils-1.0/ldid/: Makefile.am  ldid.cpp
iPhoneSDK-utils-1.0/libplutil/: Makefile.am
iPhoneSDK-utils-1.0/plutil/: Makefile.am
iPhoneSDK-utils-1.0/pngcrush/: Makefile.am  fixpng.c
iPhoneSDK-utils-1.0/proj2make/: CPBPROJ.h  CTarget.cpp
iPhoneSDK-utils/clang-wrapper/: Makefile.in  clangwrapper.cpp  iPhoneSDK.cpp  xalloc.h
iPhoneSDK-utils/clangwrapper/: Makefile.am  clangwrapper.cpp
iPhoneSDK-utils/createProject/: Makefile.am  Makefile.in
iPhoneSDK-utils/createProject/iPhoneTemplates/: Application.template  Command_line_utility.template
iPhoneSDK-utils/createProject/templates/Example_UICatalog/: Makefile
iPhoneSDK-utils/genLocalization/: Makefile.in
iPhoneSDK-utils/genLocalization2/: Makefile.am  helper.h  main.cpp
iPhoneSDK-utils/iphone-fixpng/: Makefile.am
iPhoneSDK-utils/ldid/: finder.h  ldid.cpp
iPhoneSDK-utils/libhelper/: Makefile.am
iPhoneSDK-utils/plutil/: Makefile.am
iPhoneSDK-utils/pngcrush/: README.txt
iPhoneSDK-utils/proj2make/: CMaker.cpp  CTarget.h  Makefile.am  helper.cpp  helper.h  list.txt  main.cpp
iPhoneSDK-utils/proj2make/BASE_PC/: base.h
iPhoneSDK-utils/proj2make/BASE_PC/Dohickies/: CTokFile.cpp  CcLexFile.cpp
iPhoneSDK-utils/proj2make/BASE_PC/Dohickies/RESOURCE.FRK/: CCLEXF~1.CP  CTOKFILE.H
iphonesdk-utils/: Makefile.am  configure.ac
iphonesdk-utils/clangwrapper/: clangwrapper.cpp
iphonesdk-utils/genLocalization2/: getLocalizedStringFromFile.cpp
iphonesdk-utils/libhelper/: pathutil.cpp  xmlutil.cpp
iphonesdk-utils/libplutil/: Makefile.am
iphonesdk-utils/plutil/: plutil.c
iphonesdk-utils/proj2make/: CPBPROJ.cpp
iphonesdk-utils/xcbuild/: xcbuild.cpp
ld64-134.9/: README  ld64-134.9-ported-standalone.patch
libsublime/: sublime-imfix.c
newproj/: Makefile  README  pbxproj.cpp
trunk/cctools-836/: configure.ac
trunk/cctools-836-ld64-134.9/: Makefile.in
trunk/cctools-porting/: cctools-ld64.sh  updatesources.sh
trunk/corefoundation/: CF-744.12-for-linux.patch
trunk/editor/: Makefile
trunk/gdb-1822/: README  gdb-1822-ported.patch
trunk/iPhoneSDK-utils/: ChangeLog  Makefile.am  aclocal.m4  configure.ac
trunk/iPhoneSDK-utils-1.0/: Makefile.am  aclocal.m4  config.h.in  configure.ac
trunk/iPhoneSDK-utils-1.0/clangwrapper/: Makefile.am
trunk/iPhoneSDK-utils-1.0/genLocalization2/: Makefile.am
trunk/iPhoneSDK-utils-1.0/libplutil/: Makefile.am
trunk/iPhoneSDK-utils-1.0/proj2make/: Makefile.am
trunk/iPhoneSDK-utils-1.0/proj2make/BASE_PC/: cutil.cpp
trunk/iPhoneSDK-utils-1.0/proj2make/BASE_PC/Dohickies/: CcLexFile.h
trunk/iPhoneSDK-utils/clang-wrapper/: Makefile.am  Makefile.in
trunk/iPhoneSDK-utils/createProject/templates/: Makefile.am
trunk/iPhoneSDK-utils/createProject/templates/Command_line_utility/: Makefile
trunk/iPhoneSDK-utils/createProject/templates/Example_UICatalog/: Makefile
trunk/iPhoneSDK-utils/genLocalization/: Makefile.am  genLocalization
trunk/iPhoneSDK-utils/genLocalization2/: Makefile  Makefile.am  helper.cpp  main.cpp  plutil
trunk/iPhoneSDK-utils/iphone-fixpng/: Makefile.am  Makefile.in  flipchannels.c
trunk/iPhoneSDK-utils/ldid/: Makefile.am  Makefile.in  finder.cpp
trunk/iPhoneSDK-utils/plutil/: Makefile.am  list
trunk/iPhoneSDK-utils/pngcrush/: Makefile.am  pincrush.c
trunk/iphonesdk-utils/: configure.ac
trunk/iphonesdk-utils/proj2make/: Makefile.am
trunk/iphonesdk-utils/proj2make/BASE_PC/Dohickies/: CSymbol.c  CTokFile.h  CpbxLexFile.h
trunk/ld64-128.2/: ld64-128.2-ported-standalone.patch
trunk/ld64-134.9/: ld64-134.9-ported-standalone.patch
trunk/libsublime/: im-position.py  sublime-imfix.c
wiki/: HowTo_en.wiki  HowTo_zh.wiki  Howto_debug_en.wiki  build_clang_en.wiki  build_clang_zh.wiki  build_lldb_en.wiki  debugserver_en.wiki  emacs_complete_en.wiki  emacs_complete_zh.wiki  iphoneos_sdk_en.wiki  iphoneos_sdk_zh.wiki  llvm_gcc.wiki
(+129 files in other folders)
